fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -291,6 +291,8 @@
   "Filter options": "Opcje filtrowania",
   "Filter": "Filtr",
   "No results": "Brak wyników",
+  "{{ count }} members": "{{ count }} member",
+  "{{ count }} members_plural": "{{ count }} members",
   "{{authorName}} created <3></3>": "{{authorName}} stworzył <3></3>",
   "{{authorName}} opened <3></3>": "{{authorName}} otworzył <3></3>",
   "Search emoji": "Szukaj emotikonów",
@@ -352,6 +354,8 @@
   "Reaction picker": "Selektor reakcji",
   "Could not load reactions": "Nie można załadować reakcji",
   "Reaction": "Reakcja",
+  "{{ hours }}h {{ minutes }}m read": "{{ hours }}h {{ minutes }}m read",
+  "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }} minut czytania",
   "Revision deleted": "Usunięto poprawkę",
   "Current version": "Aktualna wersja",
@@ -481,8 +485,6 @@
   "Image height": "Wysokość obrazu",
   "Height": "Wysokość",
   "Profile picture": "Zdjęcie profilowe",
-  "{{ count }} members": "{{ count }} member",
-  "{{ count }} members_plural": "{{ count }} members",
   "Create a new doc": "Utwórz nowy dokument",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} nie zostanie powiadomiony, ponieważ nie mają dostępu do tego dokumentu",
   "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
@@ -998,8 +1000,10 @@
   "Check server logs for more details.": "Sprawdź logi serwera, aby uzyskać więcej szczegółów.",
   "{{userName}} requested": "{{userName}} zażądano",
   "Groups are for organizing your team. They work best when centered around a function or a responsibility — Support or Engineering for example.": "Grupy służą do organizacji Twojego zespołu. Pracują najlepiej, gdy skupiają się wokół funkcji lub zadania, na przykład Obsługa Klienta lub Inżynieria.",
+  "Optional": "Opcjonalnie",
   "You’ll be able to add people to the group next.": "Następnie będziesz mógł dodać ludzi do grupy.",
   "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "Możesz edytować nazwę tej grupy w dowolnym momencie, jednak zbyt częste zmiany mogą zdezorientować twoich kolegów z zespołu.",
+  "Description": "Opis",
   "Disable mentions": "Wyłącz wzmianki",
   "Prevent this group from being mentionable in documents or comments": "Prevent this group from being mentionable in documents or comments",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "Czy jesteś pewien co do tego? Usunięcie grupy <em>{{groupName}}</em> spowoduje utratę przez jej członków dostępu do kolekcji i dokumentów, z którymi jest powiązana.",
@@ -1020,7 +1024,6 @@
   "No people left to add": "Brak osób do dodania",
   "Group admin": "Administrator grupy",
   "Member": "Członek",
-  "Admins": "Administratorzy",
   "Date created": "Data utworzenia",
   "Crop Image": "Przytnij obraz",
   "Crop image": "Przytnij obraz",
@@ -1050,6 +1053,7 @@
   "Domain": "Domena",
   "Views": "Wyświetleń",
   "All roles": "Wszystkie role",
+  "Admins": "Administratorzy",
   "Editors": "Edytory",
   "All status": "Wszystkie statusy",
   "Active": "Aktywne",
@@ -1064,7 +1068,6 @@
   "The logo is displayed at the top left of the application.": "Logo jest wyświetlane w lewym górnym rogu aplikacji.",
   "Workspace logo": "Logo obszaru roboczego",
   "The workspace name, usually the same as your company name.": "Nazwa przestrzeni roboczej, zazwyczaj taka sama jak nazwa Twojej firmy.",
-  "Description": "Opis",
   "A short description of your workspace.": "Krótki opis Twojego obszaru roboczego.",
   "Theme": "Motyw",
   "Customize the interface look and feel.": "Dostosuj wygląd i uczucie interfejsu.",
@@ -1222,7 +1225,6 @@
   "Deleting this version of the document will permanently and irrevocably remove it from the history.": "Usunięcie tej wersji dokumentu spowoduje trwałe i nieodwołalne usunięcie jej z historii.",
   "Format": "Format",
   "Add option": "Dodaj opcję",
-  "Optional": "Opcjonalnie",
   "Choose a size for your exported document": "Wybierz rozmiar dla eksportowanego dokumentu",
   "Revision renamed": "Zmieniono nazwę wersji",
   "Failed to save revision": "Nie udało się zapisać wersji",
