--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -354,6 +354,8 @@
   "Reaction picker": "Вибір реакцій",
   "Could not load reactions": "Не вдалося завантажити реакції",
   "Reaction": "Реакції",
+  "{{ hours }}h {{ minutes }}m read": "{{ hours }}h {{ minutes }}m read",
+  "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Версія видалена",
   "Current version": "Поточна версія",
