--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -354,6 +354,8 @@
   "Reaction picker": "Reaction picker",
   "Could not load reactions": "Could not load reactions",
   "Reaction": "Phản ứng",
+  "{{ hours }}h {{ minutes }}m read": "{{ hours }}h {{ minutes }}m read",
+  "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }} phút đọc ",
   "Revision deleted": "Phiên bản đã được xóa",
   "Current version": "Phiên bản hiện tại",
