--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -113,8 +113,8 @@
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Apply template": "Apply template",
-  "Add emoji": "Add emoji",
-  "Add custom emoji": "Add custom emoji",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Home",
   "Drafts": "Drafts",
@@ -263,8 +263,10 @@
   "Emoji created successfully": "Emoji created successfully",
   "Failed to create emoji": "Failed to create emoji",
   "Uploading": "Uploading",
+  "Add emoji": "Add emoji",
   "Upload an image to create a custom emoji. The name should be unique and contain only lowercase letters, numbers, and underscores.": "Upload an image to create a custom emoji. The name should be unique and contain only lowercase letters, numbers, and underscores.",
   "Emoji name": "Emoji name",
+  "name can only should lowercase letters, numbers, and underscores.": "name can only should lowercase letters, numbers, and underscores.",
   "Click or drag to replace": "Click or drag to replace",
   "Drop the image here": "Drop the image here",
   "Click or drag an image here": "Click or drag an image here",
@@ -599,7 +601,6 @@
   "Security": "Security",
   "Features": "Features",
   "Members": "Members",
-  "Custom Emojis": "Custom Emojis",
   "API Keys": "API Keys",
   "Applications": "Applications",
   "Shared Links": "Shared Links",
@@ -1071,7 +1072,7 @@
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Active",
-  "Could not load emojis": "Could not load emojis",
+  "Could not load emoji": "Could not load emoji",
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
