--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -1072,7 +1072,7 @@
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Active",
-  "Could not load emoji": "Could not load emoji",
+  "Could not load emojis": "Could not load emojis",
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
