--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -324,7 +324,7 @@
   "Dismiss": "Odrzuć",
   "Unable to download image": "Nie można pobrać obrazu",
   "Lightbox": "Okno modalne",
-  "View, navigate, or download images in the document": "View, navigate, or download images in the document",
+  "View, navigate, or download images in the document": "Przeglądaj, nawiguj lub pobierz obrazy w dokumencie",
   "Zoom in": "Powiększ",
   "Zoom out": "Pomniejsz",
   "Close": "Zamknij",
@@ -1114,7 +1114,7 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Otrzymuj powiadomienie, gdy dokument, który subskrybujesz, lub wątek, w którym uczestniczyłeś, otrzyma komentarz",
   "Mentioned": "Wspomniany",
   "Receive a notification when someone mentions you in a document or comment": "Otrzymuj powiadomienie, gdy ktoś wspomni o Tobie w dokumencie lub komentarzu",
-  "Group mentions": "Group mentions",
+  "Group mentions": "Wzmianki grupy",
   "Receive a notification when someone mentions a group you are a member of in a document or comment": "Otrzymaj powiadomienie, gdy ktoś wspomni o grupie, do której należysz w dokumencie lub komentarzu",
   "Receive a notification when a comment thread you were involved in is resolved": "Otrzymaj powiadomienie, gdy wątek komentarza, w który byłeś zaangażowany, został rozwiązany",
   "Reaction added": "Reakcja dodana",
@@ -1232,15 +1232,15 @@
   "Sorry, invalid embed link": "Niepoprawny link osadzenia",
   "Data Attributes": "Atrybuty danych",
   "Edit attribute": "Edytuj atrybut",
-  "Property": "Property",
+  "Property": "Właściwość",
   "Yes": "Tak",
   "No": "Nie",
   "Search or ask a question": "Wyszukaj lub zadaj pytanie",
   "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.": "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.",
   "Can view only what is explicitly shared": "Can view only what is explicitly shared",
   "SAML assertion was invalid or missing fields, please check your configuration": "SAML assertion was invalid or missing fields, please check your configuration",
-  "AI generated answer based on related documents in your workspace": "AI generated answer based on related documents in your workspace",
-  "References": "References",
+  "AI generated answer based on related documents in your workspace": "AI wygenerowała odpowiedź na podstawie powiązanych dokumentów w Twoim projekcie",
+  "References": "Odniesienia",
   "Enable AI answers to get direct answers to searched questions.": "Włącz odpowiedzi AI, aby uzyskać odpowiedzi na wyszukiwane pytania.",
   "Go to settings": "Przejdź do ustawień",
   "Where do I find the file?": "Gdzie znajdę plik?",
@@ -1258,7 +1258,7 @@
   "When enabled, publicly shared documents can be embedded in third-party websites": "Gdy włączone, publicznie udostępniane dokumenty mogą być osadzone w witrynach zewnętrznych",
   "Include previews in emails": "Dołączaj miniatury w wiadomościach e-mail",
   "When enabled, email notifications will include content previews": "Gdy ta opcja jest włączona, powiadomienia e-mail będą zawierać podglądy treści",
-  "Boolean": "Boolean",
+  "Boolean": "Wartość logiczna",
   "Number": "Liczba",
   "Text": "Tekst",
   "List": "Lista",
@@ -1270,9 +1270,9 @@
   "Event": "Zdarzenie",
   "Timestamp": "Znacznik czasu",
   "IP": "Adres IP",
-  "a group": "a group",
-  "All users": "All users",
-  "Private": "Private",
+  "a group": "grupa",
+  "All users": "Wszyscy użytkownicy",
+  "Private": "Prywatne",
   "View and edit": "Podgląd i edycja",
   "Sharing enabled": "Udostępnianie włączone",
   "Date archived": "Data archiwizacji",
