custom emoji menu

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -173,6 +173,7 @@
   "Navigation": "Navigation",
   "Notification": "Notification",
   "Groups": "Groups",
+  "Emoji": "Emoji",
   "People": "People",
   "Share": "Share",
   "Workspace": "Workspace",
@@ -613,6 +614,8 @@
   "Comment options": "Comment options",
   "Enable viewer insights": "Enable viewer insights",
   "Enable embeds": "Enable embeds",
+  "Delete Emoji": "Delete Emoji",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Group members",
   "Edit group": "Edit group",
@@ -862,7 +865,6 @@
   "Inline LaTeX": "Inline LaTeX",
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "Insert block",
   "Sign In": "Sign In",
   "Continue with Email": "Continue with Email",
