fix: click img to open link

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -1405,5 +1405,6 @@
   "Empty diagram": "Empty diagram",
   "Double click to edit": "Double click to edit",
   "Open": "Open",
+  "Zoom In": "Zoom In",
   "Error loading data": "Error loading data"
 }
