fix: click img to open link

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -1368,5 +1368,6 @@
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
   "Caption": "Caption",
   "Open": "Open",
+  "Zoom In": "Zoom In",
   "Error loading data": "Error loading data"
 }
