Feat/custom emoji as document and collection icon (#10567)
* Update en_US translations from upstream (#10425)

Co-authored-by: GitHub Action <action@github.com>

* Revert "Update en_US translations from upstream (#10425)" (#10426)

This reverts commit d2ef7e770d7d135a15906b1dcf8baaf14e51dcb8.

* custom emojis for document icons

* custom emoji panel

* refractor icon state

* remove unnecessary comment

* fix style and optimize emoji search

* use emoji uuid for local storage

---------

Co-authored-by: Translate-O-Tron <75237327+outline-translations@users.noreply.github.com>
Co-authored-by: GitHub Action <action@github.com>
Co-authored-by: Tom Moor <tom@getoutline.com>

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -317,6 +317,8 @@
   "Icon Picker": "Icon Picker",
   "Icons": "Icons",
   "Emojis": "Emojis",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Custom",
   "Remove": "Remove",
   "All": "All",
   "Frequently Used": "Frequently Used",
@@ -667,7 +669,6 @@
   "30 days": "30 days",
   "60 days": "60 days",
   "90 days": "90 days",
-  "Custom": "Custom",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "The document archive is empty at the moment.",
   "Drop documents to import": "Drop documents to import",
