--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Об'єкти",
   "Symbols": "Символи",
   "Flags": "Прапори",
-  "Select a color": "Виберіть колір",
-  "Loading": "Завантаження",
   "View only": "Тільки перегляд",
   "Can edit": "Можна редагувати",
   "No access": "Немає доступу",
@@ -377,7 +375,7 @@
   "Disable this setting to discourage search engines from indexing the page": "Вимкніть цей параметр, щоб заборонити пошуковій системі індексувати сторінку",
   "Show last modified": "Show last modified",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
-  "Show table of contents": "Show table of contents",
+  "Show table of contents": "Показ змісту",
   "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Запросити",
@@ -450,6 +448,8 @@
   "Installation": "Встановлення",
   "Unstar document": "Видалити з обраного",
   "Star document": "Додати до обраного",
+  "Select a color": "Виберіть колір",
+  "Loading": "Завантаження",
   "Template created, go ahead and customize it": "Шаблон створено, тепер налаштуйте його під ваші потреби",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Створення шаблону з <em>{{titleWithDefault}}</em> не є руйнівною дією – ми зробимо копію документа та перетворимо її на шаблон, який можна використовувати як основу для нових документів.",
   "Enable other members to use the template immediately": "Дозволити іншим учасникам відразу використовувати шаблон",
