fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Objets",
   "Symbols": "Symboles",
   "Flags": "Drapeaux",
-  "Select a color": "Sélectionnez une couleur",
-  "Loading": "Chargement",
   "View only": "Voir seulement",
   "Can edit": "Peut modifier",
   "No access": "Pas d'accès",
@@ -450,6 +448,8 @@
   "Installation": "Installation",
   "Unstar document": "Retirer le document des favoris",
   "Star document": "Mettre en favoris le document",
+  "Select a color": "Sélectionnez une couleur",
+  "Loading": "Chargement",
   "Template created, go ahead and customize it": "Le modèle a été créé, vous pouvez maintenant le personnaliser",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "La création d'un modèle à partir de <em>{{titleWithDefault}}</em> est une action non destructrice - nous allons faire une copie du document et le transformer en un modèle qui peut être utilisé comme point de départ pour de nouveaux documents.",
   "Enable other members to use the template immediately": "Autoriser les autres membres à utiliser le modèle immédiatement",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Désolé, une erreur s'est produite lors de l'enregistrement de la collection",
   "Add a description": "Ajouter une description",
   "Overview": "Aperçu",
+  "Popular": "Popular",
   "Recently updated": "Récemment mis à jour",
   "Recently published": "Récemment publiés",
   "Least recently updated": "Anciennement modifiés",
@@ -783,7 +784,8 @@
   "Something went wrong": "Un problème est survenu",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Désolé ! Une erreur inconnue s'est produite lors du chargement de la page. Merci de réessayer ou de contacter l'assistance si l'erreur perdure.",
   "Created by me": "Créé par moi",
-  "Weird, this shouldn’t ever be empty": "Bizarre, ça ne devrait jamais être vide",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Vous n'avez pas encore créé de documents",
   "Documents you’ve recently viewed will be here for easy access": "Les documents que vous avez récemment consultés seront facilement accessibles ici",
   "{{ count }} invites sent": "{{ count }} invitations envoyées",
