fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Objetos",
   "Symbols": "Símbolos",
   "Flags": "Banderas",
-  "Select a color": "Selecciona un color",
-  "Loading": "Cargando",
   "View only": "Solo lectura",
   "Can edit": "Puede editar",
   "No access": "Sin acceso",
@@ -450,6 +448,8 @@
   "Installation": "Instalación",
   "Unstar document": "Eliminar documento de favoritos",
   "Star document": "Marcar documento como favorito",
+  "Select a color": "Selecciona un color",
+  "Loading": "Cargando",
   "Template created, go ahead and customize it": "Plantilla creada, procede a personalizarla",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Crear una plantilla a partir de <em>{{titleWithDefault}}</em> es una acción no destructiva – crearemos una copia del documento y la convertiremos en una plantilla que se puede utilizar como punto de partida para nuevos documentos.",
   "Enable other members to use the template immediately": "Habilitar a otros miembros para utilizar la plantilla inmediatamente",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Lo sentimos, se ha producido un error al guardar la colección",
   "Add a description": "Añadir una descripción",
   "Overview": "Resumen",
+  "Popular": "Popular",
   "Recently updated": "Actualizado recientemente",
   "Recently published": "Publicado recientemente",
   "Least recently updated": "Actualizado menos recientemente",
@@ -783,7 +784,8 @@
   "Something went wrong": "Algo ha salido mal",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Creado por mí",
-  "Weird, this shouldn’t ever be empty": "Que raro, esto nunca debería estar vacío",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Aún no has creado ningún documento",
   "Documents you’ve recently viewed will be here for easy access": "Los documentos que hayas visto recientemente estarán aquí para fácil acceso",
   "{{ count }} invites sent": "{{ count }} invites sent",
