fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Objekty",
   "Symbols": "Symboly",
   "Flags": "Vlajky",
-  "Select a color": "Vybrat barvu",
-  "Loading": "Načítání",
   "View only": "Pouze zobrazit",
   "Can edit": "Může upravovat",
   "No access": "Bez přístupu",
@@ -450,6 +448,8 @@
   "Installation": "Instalace",
   "Unstar document": "Odznačit dokument",
   "Star document": "Označit dokument",
+  "Select a color": "Vybrat barvu",
+  "Loading": "Načítání",
   "Template created, go ahead and customize it": "Šablona vytvořena, pokračujte a přizpůsobte ji",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Vytvoření šablony z <em>{{titleWithDefault}}</em> je nedestruktivní akce – vytvoříme kopii dokumentu a přeměníme ji na šablonu, kterou lze použít jako výchozí bod pro nové dokumenty.",
   "Enable other members to use the template immediately": "Enable other members to use the template immediately",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Omlouváme se, při ukládání sbírky došlo k chybě",
   "Add a description": "Přidat popis",
   "Overview": "Přehled",
+  "Popular": "Popular",
   "Recently updated": "Nedávno aktualizováno",
   "Recently published": "Nedávno zveřejněné",
   "Least recently updated": "Naposledy aktualizováno",
@@ -783,7 +784,8 @@
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Vytvořeno mnou",
-  "Weird, this shouldn’t ever be empty": "Divné, tohle by nikdy nemělo být prázdné",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Zatím jste nevytvořili žádné dokumenty",
   "Documents you’ve recently viewed will be here for easy access": "Dokumenty, které jste si nedávno prohlíželi, zde budou pro snadný přístup",
   "{{ count }} invites sent": "{{ count }} invites sent",
