--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Objects",
   "Symbols": "Symbols",
   "Flags": "Flags",
-  "Select a color": "Vælg en farve",
-  "Loading": "Indlæser",
   "View only": "Kun visning",
   "Can edit": "Can edit",
   "No access": "Ingen adgang",
@@ -450,6 +448,8 @@
   "Installation": "Installation",
   "Unstar document": "Unstar document",
   "Star document": "Star document",
+  "Select a color": "Vælg en farve",
+  "Loading": "Indlæser",
   "Template created, go ahead and customize it": "Skabelon oprettet. Gør med den hvad du vil",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Oprettelse af en skabelon fra <em>{{titleWithDefault}}</em> er en ikke-destruktiv handling – en kopi af dokumentet vil blive lavet til en skabelon, der kan bruges som udgangspunkt for nye dokumenter.",
   "Enable other members to use the template immediately": "Enable other members to use the template immediately",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Sorry, an error occurred saving the collection",
   "Add a description": "Add a description",
   "Overview": "Overview",
+  "Popular": "Popular",
   "Recently updated": "Recently updated",
   "Recently published": "Recently published",
   "Least recently updated": "Least recently updated",
@@ -783,7 +784,8 @@
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Created by me",
-  "Weird, this shouldn’t ever be empty": "Weird, this shouldn’t ever be empty",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "You haven’t created any documents yet",
   "Documents you’ve recently viewed will be here for easy access": "Documents you’ve recently viewed will be here for easy access",
   "{{ count }} invites sent": "{{ count }} invites sent",
