fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Objekte",
   "Symbols": "Symbole",
   "Flags": "Flaggen",
-  "Select a color": "Wähle eine Farbe",
-  "Loading": "Laden",
   "View only": "Nur anzeigen",
   "Can edit": "Darf bearbeiten",
   "No access": "Kein Zugriff",
@@ -450,6 +448,8 @@
   "Installation": "Installation",
   "Unstar document": "Favorisierung entfernen",
   "Star document": "Dokument zu Favoriten hinzufügen",
+  "Select a color": "Wähle eine Farbe",
+  "Loading": "Laden",
   "Template created, go ahead and customize it": "Vorlage erstellt, fortfahren und anpassen",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Das Erstellen einer Vorlage durch <em>{{titleWithDefault}}</em> ist eine non-destruktive Aktion – wir erstellen eine Kopie des Dokuments und verwandeln es in eine Vorlage, die als Ausgangspunkt für neue Dokumente verwendet werden kann.",
   "Enable other members to use the template immediately": "Erlaube anderen Mitgliedern die Vorlage sofort zu verwenden",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Beim Speichern der Sammlung ist leider ein Fehler aufgetreten",
   "Add a description": "Beschreibung hinzufügen",
   "Overview": "Übersicht",
+  "Popular": "Popular",
   "Recently updated": "Vor Kurzem aktualisiert",
   "Recently published": "Vor Kurzem veröffentlicht",
   "Least recently updated": "Am längsten nicht aktualisiert",
@@ -783,7 +784,8 @@
   "Something went wrong": "Etwas ist schiefgelaufen",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Entschuldigung, beim Laden der Seite ist ein unbekannter Fehler aufgetreten. Bitte versuchen Sie es erneut oder kontaktieren Sie den Support, falls das Problem weiterhin besteht.",
   "Created by me": "Von mir erstellt",
-  "Weird, this shouldn’t ever be empty": "Seltsam, das sollte nie leer sein",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Du hast noch keine Dokumente erstellt",
   "Documents you’ve recently viewed will be here for easy access": "Dokumente, die du dir kürzlich angesehen hast, sind hier für einen einfachen Zugriff verfügbar",
   "{{ count }} invites sent": "{{ count }} invites sent",
