--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Tárgyak",
   "Symbols": "Szimbólumok",
   "Flags": "Zászlók",
-  "Select a color": "Válasszon egy színt",
-  "Loading": "Betöltés",
   "View only": "Csak megtekintés",
   "Can edit": "Szerkesztheti",
   "No access": "Nincs hozzáférés",
@@ -450,6 +448,8 @@
   "Installation": "Telepítés",
   "Unstar document": "Dokumentum csillagozásának törlése",
   "Star document": "Dokumentum csillagozása",
+  "Select a color": "Válasszon egy színt",
+  "Loading": "Betöltés",
   "Template created, go ahead and customize it": "A sablon elkészült, fogjon bele a testreszabásba",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Sablon létrehozása a(z) <em>{{titleWithDefault}}</em> dokumentumból \"roncsolásmentes\" művelet – egy másolatot készítünk a dokumentumból, melyből sablon lesz, ami új dokumentumok kiinduló pontjának használható.",
   "Enable other members to use the template immediately": "Enable other members to use the template immediately",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Sajnálom, valami hiba merült fel a gyűjtemény mentése közben",
   "Add a description": "Adja meg a leírást",
   "Overview": "Áttekintés",
+  "Popular": "Popular",
   "Recently updated": "Nemrég módosítva",
   "Recently published": "Nemrég publikálva",
   "Least recently updated": "Legrégebben módosított",
@@ -783,7 +784,8 @@
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Általam létrehozva",
-  "Weird, this shouldn’t ever be empty": "Weird, this shouldn’t ever be empty",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "You haven’t created any documents yet",
   "Documents you’ve recently viewed will be here for easy access": "Documents you’ve recently viewed will be here for easy access",
   "{{ count }} invites sent": "{{ count }} invites sent",
