fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Oggetti",
   "Symbols": "Simboli",
   "Flags": "Bandiere",
-  "Select a color": "Seleziona un colore",
-  "Loading": "Caricamento in corso",
   "View only": "Visualizza soltanto",
   "Can edit": "Può modificare",
   "No access": "Accesso negato",
@@ -450,6 +448,8 @@
   "Installation": "Installazione",
   "Unstar document": "Rimuovi dai preferiti",
   "Star document": "Condividi documento",
+  "Select a color": "Seleziona un colore",
+  "Loading": "Caricamento in corso",
   "Template created, go ahead and customize it": "Modello creato, procedi e personalizzalo",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Creare un modello da <em>{{titleWithDefault}}</em> è un'azione non distruttiva - faremo una copia del documento e lo convertiremo in un modello, così che potrà essere usato come punto d'inizio per nuovi documenti.",
   "Enable other members to use the template immediately": "Consenti agli altri membri di utilizzare il modello immediatamente",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Spiacenti, si è verificato un errore durante il salvataggio della raccolta",
   "Add a description": "Aggiungi una descrizione",
   "Overview": "Descrizione",
+  "Popular": "Popular",
   "Recently updated": "Aggiornati di recente",
   "Recently published": "Pubblicati di recente",
   "Least recently updated": "Aggiornati meno recentemente",
@@ -783,7 +784,8 @@
   "Something went wrong": "Qualcosa è andato storto",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Si è verificato un errore sconosciuto durante il caricamento della pagina. Riprova o contatta il supporto se il problema persiste.",
   "Created by me": "Creato da me",
-  "Weird, this shouldn’t ever be empty": "Strano, questo non dovrebbe mai essere vuoto",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Non hai ancora creato alcun documento",
   "Documents you’ve recently viewed will be here for easy access": "I documenti che hai recentemente visualizzato compariranno qui per facilitarne l'accesso",
   "{{ count }} invites sent": "{{ count }} invites sent",
