fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -314,8 +314,6 @@
   "Objects": "オブジェクト",
   "Symbols": "シンボル",
   "Flags": "フラグ",
-  "Select a color": "色を選択",
-  "Loading": "ローディング",
   "View only": "表示のみ",
   "Can edit": "編集可能",
   "No access": "アクセス不可",
@@ -450,6 +448,8 @@
   "Installation": "インストール",
   "Unstar document": "お気に入りから削除",
   "Star document": "お気に入りに追加",
+  "Select a color": "色を選択",
+  "Loading": "ローディング",
   "Template created, go ahead and customize it": "テンプレートが作成されました",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "<em>{{titleWithDefault}}</em>のドキュメントからテンプレートを作成すると、元のドキュメントはコピーされ、テンプレートになります。",
   "Enable other members to use the template immediately": "他のメンバーがテンプレートをすぐに利用できるようにする",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "コレクションの保存中にエラーが発生しました",
   "Add a description": "説明文を追加",
   "Overview": "概要",
+  "Popular": "Popular",
   "Recently updated": "更新日の新しい順",
   "Recently published": "最近公開されたもの",
   "Least recently updated": "更新日の古い順",
@@ -783,7 +784,8 @@
   "Something went wrong": "エラーが発生しました",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "自分が作成",
-  "Weird, this shouldn’t ever be empty": "ここには何もありません",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "ここにはまだドキュメントがありません",
   "Documents you’ve recently viewed will be here for easy access": "最近閲覧したドキュメントがここに表示されます",
   "{{ count }} invites sent": "{{ count }} invites sent",
