fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -314,8 +314,6 @@
   "Objects": "사물",
   "Symbols": "상징",
   "Flags": "깃발",
-  "Select a color": "색상 선택",
-  "Loading": "로딩 중",
   "View only": "보기 전용",
   "Can edit": "편집 가능",
   "No access": "접근 불가",
@@ -450,6 +448,8 @@
   "Installation": "설치",
   "Unstar document": "문서 별표 해제",
   "Star document": "문서 별표 표시",
+  "Select a color": "색상 선택",
+  "Loading": "로딩 중",
   "Template created, go ahead and customize it": "템플릿이 생성되었습니다. 커스터마이징이 가능합니다.",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "<em>{{titleWithDefault}}</em>에서 템플릿을 만들더라도 원본 문서는 수정되지 않습니다. 이 문서의 복사본을 생성해서 새 문서의 시작점으로 사용할 수 있는 템플릿을 만듭니다.",
   "Enable other members to use the template immediately": "다른 멤버가 템플릿을 즉시 사용할 수 있도록 설정",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "컬렉션을 저장하는 중에 오류가 발생했습니다.",
   "Add a description": "설명 추가",
   "Overview": "개요",
+  "Popular": "Popular",
   "Recently updated": "최근에 업데이트됨",
   "Recently published": "최근에 게시됨",
   "Least recently updated": "오래된 순",
@@ -783,7 +784,8 @@
   "Something went wrong": "문제가 발생했습니다",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "죄송합니다. 페이지를 로드하는 중에 알 수 없는 오류가 발생했습니다. 다시 시도하거나 문제가 지속되면 지원팀에 문의하세요.",
   "Created by me": "내가 생성함",
-  "Weird, this shouldn’t ever be empty": "이상하네, 여기가 비어 있으면 안 되는데",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "아직 문서를 만들지 않았습니다.",
   "Documents you’ve recently viewed will be here for easy access": "쉽게 액세스할 수 있도록 최근에 본 문서가 여기에 표시됩니다.",
   "{{ count }} invites sent": "{{ count }} invites sent",
