--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Objecten",
   "Symbols": "Symbolen",
   "Flags": "Vlaggen",
-  "Select a color": "Selecteer een kleur",
-  "Loading": "Aan het laden",
   "View only": "Alleen bekijken",
   "Can edit": "Kan bewerken",
   "No access": "Geen toegang",
@@ -450,6 +448,8 @@
   "Installation": "Installatie",
   "Unstar document": "Document verwijderen uit favorieten",
   "Star document": "Document toevoegen aan favorieten",
+  "Select a color": "Selecteer een kleur",
+  "Loading": "Aan het laden",
   "Template created, go ahead and customize it": "Sjabloon gemaakt, ga aan de gang en pas het aan",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Het maken van een sjabloon van <em>{{titleWithDefault}}</em> is een niet-destructieve actie – we maken een kopie van het document en maken daar een sjabloon van dat kan worden gebruikt als uitgangspunt voor nieuwe documenten.",
   "Enable other members to use the template immediately": "Schakel andere leden in om de sjabloon onmiddellijk te gebruiken",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Er is een fout opgetreden bij het opslaan van de collectie",
   "Add a description": "Beschrijving toevoegen",
   "Overview": "Overzicht",
+  "Popular": "Popular",
   "Recently updated": "Onlangs bijgewerkt",
   "Recently published": "Onlangs gepubliceerd",
   "Least recently updated": "Minst recent bijgewerkt",
@@ -783,7 +784,8 @@
   "Something went wrong": "Er ging iets mis",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, er is een onbekende fout opgetreden bij het laden van de pagina. Probeer het opnieuw of neem contact op met ondersteuning als het probleem zich blijft voordoen.",
   "Created by me": "Door mij aangemaakt",
-  "Weird, this shouldn’t ever be empty": "Vreemd, dit zou nooit leeg moeten zijn",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Je hebt nog geen documenten aangemaakt",
   "Documents you’ve recently viewed will be here for easy access": "Documenten die je onlangs hebt bekeken zullen hier voor eenvoudige toegang zijn",
   "{{ count }} invites sent": "{{ count }} uitnodigingen verzonden",
