fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Obiekty",
   "Symbols": "Symbole",
   "Flags": "Flagi",
-  "Select a color": "Wybierz kolor",
-  "Loading": "Ładowanie",
   "View only": "Tylko podgląd",
   "Can edit": "Może edytować",
   "No access": "Brak dostępu",
@@ -450,6 +448,8 @@
   "Installation": "Instalacja",
   "Unstar document": "Usuń oznaczenie gwiazdką",
   "Star document": "Oznacz dokument gwiazdką",
+  "Select a color": "Wybierz kolor",
+  "Loading": "Ładowanie",
   "Template created, go ahead and customize it": "Szablon utworzony, przejdź do przodu i dostosuj go",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Tworzenie szablonu z <em>{{titleWithDefault}}</em> jest akcją nieniszczącą - zrobimy kopię dokumentu i zamienimy go w szablonie, który może być użyty jako punkt wyjścia dla nowych dokumentów.",
   "Enable other members to use the template immediately": "Pozwól innym użytkownikom użyć tego szablonu",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Przepraszamy, wystąpił błąd podczas zapisywania kolekcji",
   "Add a description": "Dodaj opis",
   "Overview": "Informacje ogólne",
+  "Popular": "Popular",
   "Recently updated": "Ostatnio zaktualizowane",
   "Recently published": "Ostatnio opublikowane",
   "Least recently updated": "Najmniej ostatnio zaktualizowane",
@@ -783,7 +784,8 @@
   "Something went wrong": "Coś poszło nie tak",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Przepraszamy, wystąpił nieznany błąd podczas ładowania strony. Spróbuj ponownie lub skontaktuj się z pomocą techniczną, jeśli problem będzie się powtarzał.",
   "Created by me": "Utworzone przeze mnie",
-  "Weird, this shouldn’t ever be empty": "Dziwne, to nigdy nie powinno być puste",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Nie utworzyłeś jeszcze żadnych dokumentów",
   "Documents you’ve recently viewed will be here for easy access": "Tutaj będą dostępne dokumenty, które ostatnio przeglądałeś",
   "{{ count }} invites sent": "Wysłano {{ count }} zaproszeń",
