fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Objetos",
   "Symbols": "Símbolos",
   "Flags": "Bandeiras",
-  "Select a color": "Escolha uma cor",
-  "Loading": "A carregar",
   "View only": "Apenas consulta",
   "Can edit": "Pode editar",
   "No access": "Sem acesso",
@@ -450,6 +448,8 @@
   "Installation": "Instalação",
   "Unstar document": "Desmarcar documento",
   "Star document": "Documento favorito",
+  "Select a color": "Escolha uma cor",
+  "Loading": "A carregar",
   "Template created, go ahead and customize it": "Modelo criado, já o pode personalizar",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Criar um modelo de <em>{{titleWithDefault}}</em> é uma ação não destrutiva — será efetuada cópia do documento e será transformado em modelo que poderá ser usado como ponto de partida para novos documentos.",
   "Enable other members to use the template immediately": "Permitir que outros membros usem o modelo imediatamente",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Ocorreu um erro ao guardar a coleção",
   "Add a description": "Adicionar descrição",
   "Overview": "Overview",
+  "Popular": "Popular",
   "Recently updated": "Atualizado recentemente",
   "Recently published": "Publicado recentemente",
   "Least recently updated": "Menos atualizado recentemente",
@@ -783,7 +784,8 @@
   "Something went wrong": "Ocorreu um erro",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Criado por mim",
-  "Weird, this shouldn’t ever be empty": "Estranho, isto nunca deve estar vazio",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Ainda não criou nenhum documento",
   "Documents you’ve recently viewed will be here for easy access": "Documentos que viu recentemente estarão aqui para acesso fácil",
   "{{ count }} invites sent": "{{ count }} invites sent",
