fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Objekt",
   "Symbols": "Symbol",
   "Flags": "Flaggor",
-  "Select a color": "Välj en färg",
-  "Loading": "Laddar",
   "View only": "Endast visa",
   "Can edit": "Kan redigera",
   "No access": "Ingen access",
@@ -450,6 +448,8 @@
   "Installation": "Installation",
   "Unstar document": "Ostjärnmärk dokument",
   "Star document": "Stjärnmärk dokument",
+  "Select a color": "Välj en färg",
+  "Loading": "Laddar",
   "Template created, go ahead and customize it": "Mall skapad, gå vidare och anpassa den",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Att skapa en mall från <em>{{titleWithDefault}}</em> är en icke-förstörande åtgärd – vi gör en kopia av dokumentet och förvandlar det till en mall som kan användas som utgångspunkt för nya dokument.",
   "Enable other members to use the template immediately": "Tillåt andra medlemmar att använda mallen omedelbart",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Tyvärr, ett fel uppstod när samlingen skulle sparas",
   "Add a description": "Lägg till en beskrivning",
   "Overview": "Översikt",
+  "Popular": "Popular",
   "Recently updated": "Nyligen uppdaterad",
   "Recently published": "Nyligen publicerade",
   "Least recently updated": "Äldst uppdaterade",
@@ -783,7 +784,8 @@
   "Something went wrong": "Något gick fel",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Tyvärr, ett okänt fel uppstod när sidan laddades. Försök igen eller kontakta support om problemet kvarstår.",
   "Created by me": "Skapat av mig",
-  "Weird, this shouldn’t ever be empty": "Konstigt, detta bör aldrig vara tomt",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Du har inte skapat några dokument ännu",
   "Documents you’ve recently viewed will be here for easy access": "Dokument du nyligen har besökt kommer att finnas här för enkel åtkomst",
   "{{ count }} invites sent": "{{ count }} invites sent",
