fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Nesneler",
   "Symbols": "Semboller",
   "Flags": "Bayraklar",
-  "Select a color": "Bir renk seçin",
-  "Loading": "Yükleniyor",
   "View only": "Sadece görüntüle",
   "Can edit": "Düzenleyebilir",
   "No access": "Erişim yok",
@@ -450,6 +448,8 @@
   "Installation": "Kurulum",
   "Unstar document": "Belgenin yıldızını kaldır",
   "Star document": "Belgeyi yıldızla",
+  "Select a color": "Bir renk seçin",
+  "Loading": "Yükleniyor",
   "Template created, go ahead and customize it": "Şablon oluşturuldu, devam edin ve özelleştirin",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "<em>{{titleWithDefault}}</em> belgesinden şablon oluşturmak bozucu olmayan bir işlemdir – belgenin bir kopyasını oluşturacağız ve onu yeni belgeler için başlangıç noktası olarak kullanılabilecek bir şablona dönüştüreceğiz.",
   "Enable other members to use the template immediately": "Diğer üyelerin şablonu hemen kullanmasını sağla",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Üzgünüz, koleksiyon kaydedilirken bir hata oluştu",
   "Add a description": "Bir açıklama ekle",
   "Overview": "Genel Bakış",
+  "Popular": "Popular",
   "Recently updated": "Yakın zamanda güncellenen",
   "Recently published": "Yakın zamanda yayınlanan",
   "Least recently updated": "En az yakın zamanda güncellenen",
@@ -783,7 +784,8 @@
   "Something went wrong": "Bir şeyler yanlış gitti",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Üzgünüz, sayfayı yüklerken bilinmeyen bir hata oluştu. Lütfen tekrar deneyin veya sorun devam ederse destek ile iletişime geçin.",
   "Created by me": "Benim tarafımdan oluşturuldu",
-  "Weird, this shouldn’t ever be empty": "Garip, bu asla boş olmamalı",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Henüz herhangi bir belge oluşturmadınız",
   "Documents you’ve recently viewed will be here for easy access": "Yakın zamanda görüntülediğiniz belgeler, kolay erişim için burada olacak",
   "{{ count }} invites sent": "{{ count }} davet gönderildi",
